; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/cmdutils/whoami/extr_whoami.c_WhoamiGetUser.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/cmdutils/whoami/extr_whoami.c_WhoamiGetUser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HEAP_ZERO_MEMORY = common dso_local global i32 0, align 4
@MAX_PATH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @WhoamiGetUser(i32 %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = call i32 (...) @GetProcessHeap()
  %7 = load i32, i32* @HEAP_ZERO_MEMORY, align 4
  %8 = load i32, i32* @MAX_PATH, align 4
  %9 = call i32* @HeapAlloc(i32 %6, i32 %7, i32 %8)
  store i32* %9, i32** %4, align 8
  %10 = load i32, i32* @MAX_PATH, align 4
  store i32 %10, i32* %5, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %27

14:                                               ; preds = %1
  %15 = load i32, i32* %3, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = call i64 @GetUserNameExW(i32 %15, i32* %16, i32* %5)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %23

19:                                               ; preds = %14
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @CharLowerW(i32* %20)
  %22 = load i32*, i32** %4, align 8
  store i32* %22, i32** %2, align 8
  br label %27

23:                                               ; preds = %14
  %24 = call i32 (...) @GetProcessHeap()
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @HeapFree(i32 %24, i32 0, i32* %25)
  store i32* null, i32** %2, align 8
  br label %27

27:                                               ; preds = %23, %19, %13
  %28 = load i32*, i32** %2, align 8
  ret i32* %28
}

declare dso_local i32* @HeapAlloc(i32, i32, i32) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i64 @GetUserNameExW(i32, i32*, i32*) #1

declare dso_local i32 @CharLowerW(i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
